# playground

./: package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: test.yaml
libs/genesis-simulator/: hello.py  pyproject.toml  render_on_macos.py  tutorial.py
libs/genesis-simulator/tutorials/: beyond_rigid_bodies.py  inverse_kinematics_motion_planning.py  parallel_simulation.py
libs/multimodal-ai/: package.json
libs/simulation/: pyproject.toml
libs/wondy-web/: package.json
libs/wondy-web/prisma/: schema-py.prisma  schema.prisma
libs/wondy-web/src/app/: page.tsx
libs/zenn-ai-agent/: pyproject.toml
libs/zenn-ai-agent/zenn_ai_agent/: agent.py  camera.py  config.py  hello.py  speach_to_text.py  speech_to_text.py  storage.py  text_to_speach.py
