[project]
name = "simulation"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "gymnasium[mujoco,classic-control,other]==0.29.1",
  "mujoco==3.2.7",
  "torch==2.5.1",
  "numpy==2.2.2",
  "polars==1.18.0",
  "pyarrow==17.0.0",
  "altair==5.5.0",
  "ipython==8.27.0",
  "stable-baselines3==2.5.0",
  "pip==24.3.1",
  "huggingface-hub==0.27.1",
]

[dependency-groups]
dev = ["mypy==1.14.1", "obj2mjcf==0.0.25", "ruff==0.8.6"]

[tool.mypy]
exclude = ["mujoco_mpc/*", "data/*"]

[[tool.mypy.overrides]]
module = ["mujoco.*", "huggingface_hub.*"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
